--- a/index.ipynb
+++ b/index.ipynb
@@ -2906,7 +2906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above observations,females tend to have high number of unhealthy days.The mean difference between the two is 0.6 which is not quite huge.So let's look more into this and see  if this difference is statistically significant.\n",
+    "From the above observations,females tend to have high number of unhealthy days.The mean difference between the two is about 0.6 which is not quite huge.So let's look more into this and see  if this difference is statistically significant.\n",
     "\n",
     "For this case, the best statistical test would be the t-test since we are comparing a numeric feature(PHYSHLTH) against two categories(male and female)\n",
     "\n",
@@ -2943,10 +2943,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basing our conclusions from the above test,the null hypothesis is rejected since our p_value is smaller than the standard alpha value which is 0.05.This proves than females have higher number of unhealthy days\n",
+    "Basing our conclusions from the above test,the null hypothesis is rejected since our p_value is smaller than the standard alpha value which is 0.05.This proves that females have higher number of unhealthy days than males.\n",
     "\n",
     "\n",
-    "For the next steps,we should investigate why females have more unhealthly days. Probably,what are females doing that is contributing to their unhealthy days?Or what in their environment is contributing to this trend?"
+    "For the next steps,we should investigate why females have more unhealthly days than men. Probably,what are females doing that is contributing to their unhealthy days?Or what in their environment is contributing to this trend?"
    ]
   },
   {
